--- a/index.html
+++ b/index.html
@@ -38,6 +38,11 @@
     <div class="msg-container">
         <p id="msg">Play your move</p>
     </div>
+
+    <div class="restart-container">
+        <button id="restart-btn">Restart Game</button>
+    </div>
+    
     <script src="app.js"></script>
 </body>
 </html>
